Criado o arquivo db.json dentro da pasta api que simulará uma api para salvamento e busca de dados

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server ./api/db.json"
   },
   "prettier": {
     "printWidth": 100,
