--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "angular-oauth2-oidc": "^19.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
